启用local_search 关闭打赏

--- a/_config.yml
+++ b/_config.yml
@@ -72,3 +72,9 @@ deploy:
   type: git
   repo: https://github.com/dingzb/dingzb.github.io
   branch: master
+
+search:
+  path: search.xml
+  field: post
+  format: html
+  limit: 10000
