--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "version": "3.3.7"
   },
   "dependencies": {
+    "ali-oss": "^4.8.0",
+    "co": "^4.6.0",
     "hexo": "^3.2.0",
     "hexo-cli-extras": "^1.0.4",
     "hexo-deployer-git": "^0.3.0",
